// Copyright (c) 2020 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package server.replication.v1;

option go_package = "github.com/temporalio/temporal/.gen/proto/replication/v1;repication";

import "server/enums/v1/replication.proto";
import "server/enums/v1/task.proto";
import "server/history/v1/message.proto";

import "common/v1/message.proto";
import "namespace/v1/message.proto";
import "replication/v1/message.proto";
import "history/v1/message.proto";
import "failure/v1/message.proto";

message ReplicationInfo {
    int64 version = 1;
    int64 last_event_id = 2;
}

message ReplicationTask {
    server.enums.v1.ReplicationTaskType task_type = 1;
    int64 source_task_id = 2;
    oneof attributes {
        NamespaceTaskAttributes namespace_task_attributes = 3;
        // TODO: deprecate once NDC migration is done.
        HistoryTaskAttributes history_task_attributes = 4;
        SyncShardStatusTaskAttributes sync_shard_status_task_attributes = 5;
        SyncActivityTaskAttributes sync_activity_task_attributes = 6;
        // TODO: deprecate once kafka deprecation is done.
        HistoryMetadataTaskAttributes history_metadata_task_attributes = 7;
        HistoryTaskV2Attributes history_task_v2_attributes = 8;
    }
}

message ReplicationToken {
    int32 shard_id = 1;
    // lastRetrievedMessageId is where the next fetch should begin with.
    int64 last_retrieved_message_id = 2;
    // lastProcessedMessageId is the last messageId that is processed on the passive side.
    // This can be different than lastRetrievedMessageId if passive side supports prefetching messages.
    int64 last_processed_message_id = 3;
}

message SyncShardStatus {
    int64 timestamp = 1;
}

message ReplicationMessages {
    repeated ReplicationTask replication_tasks = 1;
    // This can be different than the last taskId in the above list, because sender can decide to skip tasks (e.g. for completed workflows).
    int64 last_retrieved_message_id = 2;
    // Hint for flow control.
    bool has_more  = 3;
    SyncShardStatus sync_shard_status = 4;
}

message ReplicationTaskInfo {
    string namespace_id = 1;
    string workflow_id = 2;
    string run_id = 3;
    server.enums.v1.TaskType task_type = 4;
    int64 task_id = 5;
    int64 version = 6;
    int64 first_event_id = 7;
    int64 next_event_id = 8;
    int64 scheduled_id = 9;
}

message NamespaceTaskAttributes {
    server.enums.v1.NamespaceOperation namespace_operation = 1;
    string id = 2;
    namespace.v1.NamespaceInfo info = 3;
    namespace.v1.NamespaceConfiguration config = 4;
    .replication.v1.NamespaceReplicationConfiguration replication_config = 5;
    int64 config_version = 6;
    int64 failover_version = 7;
}

message HistoryTaskAttributes {
    repeated string target_clusters = 1;
    string namespace_id = 2;
    string workflow_id = 3;
    string run_id = 4;
    int64 first_event_id = 5;
    int64 next_event_id = 6;
    int64 version = 7;
    map<string, ReplicationInfo> replication_info = 8;
    .history.v1.History history = 9;
    .history.v1.History new_run_history = 10;
    int32 event_store_version = 11;
    int32 new_run_event_store_version = 12;
    bool reset_workflow = 13;
    bool new_run_n_d_c = 14;
}

message HistoryMetadataTaskAttributes {
    repeated string target_clusters = 1;
    string namespace_id = 2;
    string workflow_id = 3;
    string run_id = 4;
    int64 first_event_id = 5;
    int64 next_event_id = 6;
}

message SyncShardStatusTaskAttributes {
    string source_cluster = 1;
    int64 shard_id = 2;
    int64 timestamp = 3;
}

message SyncActivityTaskAttributes {
    string namespace_id = 1;
    string workflow_id = 2;
    string run_id = 3;
    int64 version = 4;
    int64 scheduled_id = 5;
    int64 scheduled_time = 6;
    int64 started_id = 7;
    int64 started_time = 8;
    int64 last_heartbeat_time = 9;
    common.v1.Payloads details = 10;
    int32 attempt = 11;
    failure.v1.Failure last_failure = 12;
    string last_worker_identity = 13;
    server.history.v1.VersionHistory version_history = 14;
}

message HistoryTaskV2Attributes {
    int64 task_id = 1;
    string namespace_id = 2;
    string workflow_id = 3;
    string run_id = 4;
    repeated server.history.v1.VersionHistoryItem version_history_items = 5;
    common.v1.DataBlob events = 6;
    // New run events does not need version history since there is no prior events.
    common.v1.DataBlob new_run_events = 7;
}
